hedgedoc/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-backend
  namespace: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc-backend
  template:
    metadata:
      labels:
        app: hedgedoc-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/hedgedoc/hedgedoc/backend:develop
          volumeMounts:
            - name: uploads
              mountPath: /usr/src/app/backend/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: hedgedoc-uploads-pvc
