hedgedoc/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-db
  namespace: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc-db
  template:
    metadata:
      labels:
        app: hedgedoc-db
    spec:
      containers:
        - name: postgresql
          image: bitnami/postgresql:15
          volumeMounts:
            - name: db-data
              mountPath: /bitnami/postgresql
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: hedgedoc-db-pvc
      securityContext:
        runAsUser: 999 # Ensure the container runs as the 'postgres' user (UID 999)
        fsGroup: 999 # Ensure the filesystem group is 'postgres' (GID 999)
