hedgedoc/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-backend
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-frontend
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-db
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
