hedgedoc/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hedgedoc-gateway
  namespace: hedgedoc
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: hedgedoc-cert
      hosts:
        - hdoc.gwg313.xyz
